Add '/var/log' to collected artifacts
This will shift the logging configuration to the init
file rather than configuring it in ovirtlago.

As a first stage, lago will be correlated with this(also
collect /var/log), once we get all the init files configured, the
configuration will be dropped from ovirtlago.

Note, that having different configurations will cause weird results,
i.e. keeping /var/log/ovirt-engine in ovirtlago and here defining /var/log:
will cause duplicate directories. Which IMO makes sense(though that is a
discussion on lago collect functionality).

Change-Id: I136176860a1b1055c041da8306e33201655aad9b
Signed-off-by: Nadav Goldin <ngoldin@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -8,6 +8,8 @@ nat-settings: &nat-settings
 vm-common-settings: &vm-common-settings
     root-password: 123456
     service_provider: systemd
+    artifacts:
+      - /var/log
 
 vdsm-host-settings: &vdsm-host-settings
     <<: *vm-common-settings
