Use SandyBridge in HE
In HE answer file, it is required that the CPU model will  be 'SandyBridge',
so regardless of Lago CPU detection model, it is advisable to ensure the VM
uses it.

Depends on: https://github.com/lago-project/lago/pull/427

Change-Id: Idfa3643865f1c0bac765c5e5904fb82076c894a8
Signed-off-by: Nadav Goldin <ngoldin@redhat.com>

--- a/common/init-configs/1_hosted_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_2_centos7_hosts.yml
@@ -48,6 +48,7 @@ domains:
     vm-type: ovirt-host
     distro: el7
     memory: 4520
+    cpu_model: SandyBridge
     nics:
       - net: __LAGO_NET__
     disks:
@@ -74,6 +75,7 @@ domains:
     vm-type: ovirt-host
     distro: el7
     memory: 4520
+    cpu_model: SandyBridge
     nics:
       - net: __LAGO_NET__
     disks:
