test: avoid hardcoding values and rely on code defaults
Avoid hardcoding unnecessary values and rely on code defaults
where it's not strictly needed to provide a custom value.

Change-Id: I64b95e3eb95c3d3bbe9174cdc44e3904b4d373bf
Signed-off-by: Simone Tiraboschi <stirabos@redhat.com>

--- a/hc-basic-suite-master/robo.conf.in
+++ b/hc-basic-suite-master/robo.conf.in
@@ -160,7 +160,7 @@ brick_dirs=/rhs/brick3/data
 
 [script:@HOST0@]
 action=execute
-file=/root/generate-hc-answerfile.sh @HOST0@ @HOST1@ @HOST2@
+file=/root/generate-hc-answerfile.sh @HOST0@ @HOST1@ @HOST2@ @HOSTEDENGINE@ @DOMAIN@
 
 [shell2:@HOST0@]
 action=execute
