--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,3 +19,5 @@ pages:
         - 'Standart CI': CI/standard_ci_and_ost.markdown
     - 'How It Works':
         - 'Packages Management': how-it-works/package_management.markdown
+    - Suites:
+        - 'Performance Suite': general/performance-suite.markdown
