--- a/hc-basic-suite-4.1/hc-answers.conf.in
+++ b/hc-basic-suite-4.1/hc-answers.conf.in
@@ -1,3 +1,5 @@
+[environment:init]
+DIALOG/autoAcceptDefault=bool:True
 [environment:default]
 OVEHOSTED_CORE/screenProceed=bool:True
 OVEHOSTED_CORE/deployProceed=bool:True
@@ -16,11 +18,6 @@ OVEHOSTED_ENGINE/engineSetupTimeout=str:1200
 OVEHOSTED_ENGINE/enableHcGlusterService=bool:True
 OVEHOSTED_STORAGE/storageDatacenterName=str:hosted_datacenter
 OVEHOSTED_STORAGE/domainType=str:glusterfs
-OVEHOSTED_STORAGE/glusterBrick=none:None
-OVEHOSTED_STORAGE/LunID=none:None
-OVEHOSTED_STORAGE/imgSizeGB=int:60
-OVEHOSTED_STORAGE/iSCSIPortalIPAddress=none:None
-OVEHOSTED_STORAGE/iSCSITargetName=none:None
 OVEHOSTED_STORAGE/glusterProvisionedShareName=str:hosted_engine_glusterfs
 OVEHOSTED_STORAGE/iSCSIPortalPort=none:None
 OVEHOSTED_STORAGE/storageDomainName=str:hosted_storage
