Add ovirtProviderOvnPassword to the answer file
Lately the default answer for an empty password was disabled (after QE's
request). [https://gerrit.ovirt.org/#/c/77254/]
This cause OST to fail as it relies on the default answeres
for most of the installation process.
This patch is adding an empty password to the answer-file for
engine-setup.

Change-Id: Ic6e2315c77f18d7a522d9a10f6df58e8a14d83ac
Signed-off-by: Daniel Belenky <dbelenky@redhat.com>

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -56,4 +56,5 @@ OVESETUP_DWH_DB/securedHostValidation=bool:False
 OVESETUP_DWH_DB/user=str:ovirt_engine_history
 OVESETUP_DWH_PROVISIONING/postgresProvisioningEnabled=bool:True
 OVESETUP_DWH_CONFIG/scale=str:1
+OVESETUP_OVN/ovirtProviderOvnPassword=str:'123'
 OVESETUP_CONFIG/imageioProxyConfig=bool:False
