Correct ovirtProviderOvnPassword in answer files
Add the property to the upgrade answer file.
Remove apostrophes for master answer file.

Change-Id: Ieb3c7899112418375ce318bbc86c6e0cfce93c07
Signed-off-by: Marcin Mirecki <mmirecki@redhat.com>

--- a/common/answer-files/answer-file-4.0-stable-to-experimental.conf
+++ b/common/answer-files/answer-file-4.0-stable-to-experimental.conf
@@ -63,3 +63,5 @@ OVESETUP_ENGINE_CONFIG/fqdn=str:engine
 OVESETUP_CONFIG/imageioProxyConfig=bool:False
 OVESETUP_VMCONSOLE_PROXY_CONFIG/vmconsoleProxyConfig=bool:False
 OVESETUP_CONFIG/websocketProxyConfig=bool:True
+OVESETUP_OVN/ovirtProviderOvnUser=str:admin@internal
+OVESETUP_OVN/ovirtProviderOvnPassword=str:123
