Make fluentd log dir root owned and Add engine env name
Change-Id: I9c5f32c7f4969b04a623b510074b7c204f0db145
Signed-off-by: Yedidyah Bar David <didi@redhat.com>
Signed-off-by: Roy Golan <rgolan@redhat.com>

--- a/common/test-scenarios-files/metrics_bootstrap/engine-fluentd-aggregator-playbook.yml
+++ b/common/test-scenarios-files/metrics_bootstrap/engine-fluentd-aggregator-playbook.yml
@@ -7,7 +7,7 @@
     - name: create fluentd log dir
       file:
         name: /var/log/fluentd
-        owner: fluentd
+        owner: root
         state: directory
     - name: Disable fluentd forwarding
       file:
