--- a/common/init-configs/1_appliance_2_nodes_el7.yml
+++ b/common/init-configs/1_appliance_2_nodes_el7.yml
@@ -9,6 +9,7 @@ domains:
     boot_time_sec : 500
     root-password: 12345
     url: file://$LAGO_INITFILE_PATH/images/ovirt-appliance.ova
+    distro: el7
     disks:
       - type: file
         path: $LAGO_INITFILE_PATH/utils/seed.iso
@@ -41,6 +42,7 @@ domains:
 
   __ENGINE_NFS__:
     memory: 2047
+    distro: el7
     nics:
       - net: __LAGO_NET__
     disks:
@@ -66,6 +68,7 @@ domains:
 
   __NODE1__:
     vm-type: ovirt-node
+    distro: el7
     memory: 2047
     nics:
       - net: __LAGO_NET__
@@ -82,6 +85,7 @@ domains:
 
   __NODE2__:
     vm-type: ovirt-node
+    distro: el7
     memory: 2047
     nics:
       - net: __LAGO_NET__
