metrics-tests: Configure fluentd artifacts to /root
This was requested by CI infra to ease artifacts collection.

Also a configuration tweak was made to flush fluend out file in timely
manner so the actual .log file will be written and compressed.

Change-Id: Iba63600ce5d71b7dcb2aa2283b19e46026eaddd2
Signed-off-by: Roy Golan <rgolan@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -63,6 +63,9 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
+    artifacts:
+      - /var/log
+      - /root/fluentd
 
 {% for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
