--- a/common/test-scenarios-files/metrics_bootstrap/50-to-file.conf
+++ b/common/test-scenarios-files/metrics_bootstrap/50-to-file.conf
@@ -1,6 +1,7 @@
 <match **>
   @type file
-  path /var/log/fluentd/fluentdout
-  compress gzip
+  path /root/fluentd/fluentdout
   append true
+  flush_interval 10s
+  flush_at_shutdown true
 </match>
