Move HC to use virtio-SCSI and thin provisioning
With qcow2 it takes less space.
With virtio-SCSI you get discard support
(which also takes less space and is better for testing)

Change-Id: I996da30b3ba484b0ea5191691e872877391ce4ab

--- a/hc-basic-suite-master/LagoInitFile.in
+++ b/hc-basic-suite-master/LagoInitFile.in
@@ -27,14 +27,14 @@ domains:
         name: brick
         size: 100G
         type: empty
-        dev: vdb
-        format: raw
+        dev: sda
+        format: qcow2
       - comment: Used for cache
         name: cache
-        size: 20G
+        size: 100G
         type: empty
-        dev: vdc
-        format: raw
+        dev: sdb
+        format: qcow2
     metadata:
       ovirt-capabilities:
         - snapshot-live-merge
@@ -59,14 +59,14 @@ domains:
         name: brick
         size: 100G
         type: empty
-        dev: vdb
-        format: raw
+        dev: sda
+        format: qcow2
       - comment: Used for cache
         name: cache
-        size: 20G
+        size: 100G
         type: empty
-        dev: vdc
-        format: raw
+        dev: sdb
+        format: qcow2
     metadata:
       ovirt-capabilities:
         - snapshot-live-merge
@@ -91,18 +91,18 @@ domains:
         name: brick
         size: 100G
         type: empty
-        dev: vdb
-        format: raw
+        dev: sda
+        format: qcow2
       - comment: Used for cache
         name: cache
-        size: 20G
+        size: 100G
         type: empty
-        dev: vdc
-        format: raw
+        dev: sdb
+        format: qcow2
       - name: tmp
-        size: 60G
+        size: 100G
         type: empty
-        dev: vdd
+        dev: sdc
         format: qcow2
     metadata:
       ovirt-capabilities:
