Change metrics env name
Change-Id: I80cc0d5ac157431fc70baf14a7d3801070f67325
Related-To: https://bugzilla.redhat.com/show_bug.cgi?id=1462500
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/common/test-scenarios-files/metrics_bootstrap/config.yml
+++ b/common/test-scenarios-files/metrics_bootstrap/config.yml
@@ -1,3 +1,3 @@
 fluentd_fluentd_host: lago-basic-suite-master-engine
 fluentd_use_ssl: false
-ovirt_env_name: lago_engine
+ovirt_env_name: lago-engine
