ansible-suite-master: Fix group name in the palybook
1. Change group name from 'ovirt-engine' to 'vm-type=ovirt-engine'
   (following to the change in 'lago ansible_hosts').

2. Fail the test if no matching hosts were found in the inventory.

Change-Id: I08a4146eae00a9d050cfa33943b6e61c4d831cca
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
@@ -64,14 +64,14 @@
     state: present
     name: cockpit-ovirt-dashboard
   delegate_to: "{{ item }}"
-  with_items: "{{ groups['ovirt-host']}}"
+  with_items: "{{ groups['vm-type=ovirt-host'] }}"
 
 - name: Remove temporary RPM files
   file:
     state: absent
     path: "/dev/shm/*rpm"
   delegate_to: "{{ item }}"
-  with_items: "{{ groups['ovirt-host']}}"
+  with_items: "{{ groups['vm-type=ovirt-host'] }}"
 
 - name: Add NFS storage
   ovirt_storage_domains:
