Fixes to the Ansible suite
1. Removed hack required before Ansible 2.3 released.
2. Downloaded all modules in one wget command
3. Module file names were changed (plural -> single) - adjusted
4. Added all SSH options to ansible-playbook command line directly.
5. Used '-u root' for the ansible-playbook command.
6. Reordered some tests, similar to the master suite.

Change-Id: I53ff4e73824123c429c888ebe9438ab40c7b436a

--- a/ansible-suite-master/ovirt-deploy/tasks/vm_facts.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/vm_facts.yml
@@ -19,12 +19,12 @@
   register: tmp_engine_ip
 
 - name: Get LUN id for storage
-  shell: cat /root/multipath.txt | head -n 1
+  shell: head -n 1 /root/multipath.txt
   register: tmp_sd_lun_id
   changed_when: false
 
 - name: Get LUN id for direct VM disk
-  shell: cat /root/multipath.txt | head -n 2
+  shell: head -n 2 /root/multipath.txt
   register: tmp_vm_lun_id
   changed_when: false
 
