perf-suite: Support custom DB configs in deploy
Motivation:
Debug and analyze the DB using tools such as Pgbadger, or just simply scheme through logs.

Modification:
- A deploy script to set log directives which output stats and arguments about queries, TXs and vacuums.
- Lago will expose pg log directory as build artifact

Result:
Chatty postgres log, in the build artifact dir.

Change-Id: Idc404f715308e8b7f503bcc1a7ff88ad00ded725
Signed-off-by: Roy Golan <rgolan@redhat.com>

--- a/performance-suite-master/LagoInitFile.in
+++ b/performance-suite-master/LagoInitFile.in
@@ -45,6 +45,8 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
     artifacts:
           - /root/fluentd
+          - /var/opt/rh/rh-postgresql95/lib/pgsql/data/pg_log
+
 
 {% if not env.OST_USE_VDSMFAKE is defined %}
 {%- for i in range( env.OST_HOST_COUNT|default(hostCount)|int ) %}
