--- a/performance-suite-master/LagoInitFile.in
+++ b/performance-suite-master/LagoInitFile.in
@@ -11,26 +11,6 @@ vm-common-settings: &vm-common-settings
     artifacts:
       - /var/log
 
-vdsm-host-settings: &vdsm-host-settings
-    <<: *vm-common-settings
-    vm-type: ovirt-host
-    memory: 2047
-    nics:
-      - net: lago-{{ env.suite_name }}-net-management
-      - net: lago-{{ env.suite_name }}-net-storage
-      - net: lago-{{ env.suite_name }}-net-bonding
-      - net: lago-{{ env.suite_name }}-net-bonding
-    disks:
-      - template_name: {{ templates.host }}
-        type: template
-        name: root
-        dev: vda
-        format: qcow2
-    metadata:
-      deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
-
 domains:
   lago-{{ env.suite_name }}-engine:
     <<: *vm-common-settings
@@ -67,12 +47,31 @@ domains:
           - /root/fluentd
 
 {% if not env.OST_USE_VDSMFAKE is defined %}
-{% for i in range( env.OST_HOST_COUNT|default(hostCount)|int ) %}
+{%- for i in range( env.OST_HOST_COUNT|default(hostCount)|int ) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
-    <<: *vdsm-host-settings
-{% endfor %}
+    <<: *vm-common-settings
+    vm-type: ovirt-host
+    memory: 1647
+    nics:
+      - net: lago-{{ env.suite_name }}-net-management
+      - net: lago-{{ env.suite_name }}-net-storage
+      - net: lago-{{ env.suite_name }}-net-bonding
+      - net: lago-{{ env.suite_name }}-net-bonding
+    disks:
+      - template_name: {{ templates.host }}
+        type: template
+        name: root
+        dev: vda
+        format: qcow2
+    metadata:
+      deploy-scripts:
+        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
+        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
+        {% if not loop.first -%}
+        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_1st_host_el7.sh
+        {%- endif %}
+{%- endfor %}
 {% endif %}
-
 nets:
   lago-{{ env.suite_name }}-net-management:
     <<: *nat-settings
