--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -66,7 +66,7 @@ domains:
       deploy-scripts:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
-        {% if loop.first -%}
+        {% if loop.first and env.suite_name == 'basic-suite-master' -%}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_1st_host_el7.sh
         {%- endif %}
 {%- endfor %}
