Configure ImageIO as part of oVirt Engine installation
For some reason it was set to False. It should be set to True
(I would like to believe this is also the default).

This allows uploading disk via ImageIO without additional config.

Change-Id: I3ff7ee4b6fdf962b66ea8f951e5619d6958dfedf

--- a/common/answer-files/el7_master.conf
+++ b/common/answer-files/el7_master.conf
@@ -58,4 +58,4 @@ OVESETUP_DWH_PROVISIONING/postgresProvisioningEnabled=bool:True
 OVESETUP_DWH_CONFIG/scale=str:1
 OVESETUP_OVN/ovirtProviderOvnUser=str:admin@internal
 OVESETUP_OVN/ovirtProviderOvnPassword=str:123
-OVESETUP_CONFIG/imageioProxyConfig=bool:False
+OVESETUP_CONFIG/imageioProxyConfig=bool:True
