Update OST metrics bootstrap
Added fluentd_output_plugin parameter
and set it to send metrics to a central fluentd.

When elasticsearch setup will be created,
this parameter will be updated to use elasticsearch
output plugin.

This patch will enable this: https://gerrit.ovirt.org/c/83191/

Change-Id: I2e0f27cf56bed2110ae1318cf4821983b36b065c
Signed-off-by: Shirly Radco <sradco@redhat.com>
See: https://gerrit.ovirt.org/c/83191/

--- a/common/test-scenarios-files/metrics_bootstrap/config.yml
+++ b/common/test-scenarios-files/metrics_bootstrap/config.yml
@@ -1,3 +1,4 @@
 fluentd_fluentd_host: lago-basic-suite-master-engine
 fluentd_use_ssl: false
 ovirt_env_name: lago-engine
+fluentd_output_plugin: fluentd
