Setup storage during host installation, not when deploying Engine VM.
To save some time, we can set up the storage in parallel to hosts
being installed. This saves ~30s for me.

Currently, this is only enabled for master suite.
Can probably be extended to other suites later.

Change-Id: Ida4858038d15d7975b49e8616d242d0590621bdf

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -41,7 +41,9 @@ domains:
       ovirt-engine-password: 123
       deploy-scripts:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
+        {%- if env.suite_name != 'basic-suite-master' %}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
+        {%- endif %}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
     artifacts:
       - /var/log
