--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -41,7 +41,7 @@ domains:
       ovirt-engine-password: 123
       deploy-scripts:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
-        {%- if env.suite_name != 'basic-suite-master' %}
+        {%- if install_storage_with_lago_deploy|default(true) %}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         {%- endif %}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
@@ -68,7 +68,7 @@ domains:
       deploy-scripts:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
-        {% if loop.first and env.suite_name == 'basic-suite-master' -%}
+        {% if loop.first and install_ovirt_host|default(false) -%}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_1st_host_el7.sh
         {%- endif %}
 {%- endfor %}
