Use EL 7.4 hosts for Hosted Engine suite
Change-Id: I6cae93c8911454147bdbb5dc7aec0d91a733bd05

--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -35,13 +35,13 @@ domains:
         size: 101G
         type: empty
         name: iscsi
-        dev: sdc
+        dev: sdb
         format: qcow2
       - comment: Hosted engine storage
         size: 80G
         type: empty
         name: he
-        dev: sdd
+        dev: sdc
         format: qcow2
     metadata:
       deploy-scripts:
@@ -58,7 +58,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7-base
+      - template_name: el7.4-base
         type: template
         name: root
         dev: vda
@@ -86,7 +86,7 @@ domains:
     nics:
       - net: __LAGO_NET__
     disks:
-      - template_name: el7-base
+      - template_name: el7.4-base
         type: template
         name: root
         dev: vda
