docs: Fix broken links and side-bar
1. Fix broken links.
2. Fix the indentation of the 'pages' element in 'mkdocs.yml'.
   This chage will cause the links on the side-bar to appear in the
   same order and names as specified in 'mkdocs.yml'.

Change-Id: Ic3fb9e72c834188d4a6f15da2b9855e807098b87
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -7,17 +7,18 @@ theme: readthedocs
 repo_url: https://gerrit.ovirt.org/ovirt-system-tests
 repo_name: Gerrit
 pages:
-    - Home: index.markdown
-    - General:
-        - Introduction: general/introduction.markdown
-        - Installation: general/installation.markdown
-        - 'First Run': general/running_tests.markdown
-        - FAQ: general/faq.markdown
-    - CI:
-        - Jenkins: CI/jenkins_jobs.markdown
-        - 'Verifying A Patch': CI/developers_info.markdown
-        - 'Standart CI': CI/standard_ci_and_ost.markdown
-    - 'How It Works':
-        - 'Packages Management': how-it-works/package_management.markdown
-    - Suites:
-        - 'Performance Suite': general/performance-suite.markdown
+  - Home: index.markdown
+  - General:
+    - Introduction: general/introduction.markdown
+    - Installation: general/installation.markdown
+    - 'First Run': general/running_tests.markdown
+    - FAQ: general/faq.markdown
+  - CI:
+    - Jenkins: CI/jenkins_jobs.markdown
+    - 'Verifying A Patch': CI/developers_info.markdown
+    - 'Standart CI': CI/standard_ci_and_ost.markdown
+  - 'How It Works':
+    - 'Packages Management': how-it-works/package_management.markdown
+    - 'LagoInitFile Templating': how-it-works/jinja_templates_in_lagoinitfile.markdown
+  - Suites:
+    - 'Performance Suite': general/performance-suite.markdown
