Add test to check subnet on ovirt-provider-ovn
A subnet is added to the scenario to ensure that the
implementation of ovirt-provider-ovn matches the
expectations about creating, reporting and removing a
subnet.

Change-Id: Icf3438a102ea35128a48bb8a2e817455b808ce8e
Signed-off-by: Dominik Holler <dholler@redhat.com>

--- a/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Remove simple_net_subnet
+  os_subnet:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: simple_net_subnet
+
 - name: Remove simple network
   os_network:
     cloud: "{{ cloud_name }}"
