network: Add dns name server to the subnet definition
Simple net subnet specifies a dns name server.

Change-Id: Ib3605ad03ddb65744541ccd2454b80d4358fd674
Signed-off-by: Dominik Holler <dholler@redhat.com>

--- a/network-suite-master/ansible/roles/create-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/create-ovn-entities/tasks/main.yml
@@ -16,4 +16,6 @@
     cidr: 10.10.0.0/24
     gateway_ip: 10.10.0.1
     enable_dhcp: yes
+    dns_nameservers:
+      - 8.8.8.8
   register: simple_net_subnet
