network: Connect subnet to router
The simple subnet is connected to the router.
This will test if
/v2.0/routers/{router_id}/add_router_interface
and
/v2.0/routers/{router_id}/remove_router_interface
behaves as expected by ansible.

python2-ovsdbapp, which is used by ovirt-provider-ovn to
to communicate with OVN, requires an updated version of
python-netaddr from CentOS-7 - oVirt 4.2 repository to add
interfaces to a router.

Change-Id: Ic08f2d8774b9a49ff123efa72fe4fccc916b2aad
Signed-off-by: Dominik Holler <dholler@redhat.com>

--- a/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+
+# Remove the router before removing the subnet to remove the router interfaces
 - name: Remove router0
   os_router:
     cloud: "{{ cloud_name }}"
