network: Add test to check router on ovirt-provider-ovn
A router is added to the scenario to ensure that the
implementation of ovirt-provider-ovn matches the
expectations about creating, reporting and removing a
router.

Change-Id: I989e3528d9bd5491e6e8eacc433fbf38edd84550
Signed-off-by: Dominik Holler <dholler@redhat.com>

--- a/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Remove router0
+  os_router:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: router0
+
 - name: Remove simple_net_subnet
   os_subnet:
     cloud: "{{ cloud_name }}"
