--- a/network-suite-master/ansible/roles/create-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/create-ovn-entities/tasks/main.yml
@@ -19,3 +19,9 @@
     dns_nameservers:
       - 8.8.8.8
   register: simple_net_subnet
+
+- name: Create router0
+  os_router:
+    cloud: "{{ cloud_name }}"
+    state: present
+    name: router0
