network: Add test to check ports on ovirt-provider-ovn
A port is added to the scenario to ensure that the
implementation of ovirt-provider-ovn matches the
expectations about creating, reporting and removing a
port.

Change-Id: Ib0b6515cafb3cbbb4fc08c76a6c76f5d70f47c94
Signed-off-by: Dominik Holler <dholler@redhat.com>

--- a/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
+++ b/network-suite-master/ansible/roles/cleanup-ovn-entities/tasks/main.yml
@@ -13,6 +13,12 @@
     state: absent
     name: simple_net_subnet
 
+- name: Remove port simple_net_port2
+  os_port:
+    cloud: "{{ cloud_name }}"
+    state: absent
+    name: simple_net_port2
+
 - name: Remove simple network
   os_network:
     cloud: "{{ cloud_name }}"
