Collect more things on the engine
postgresql upgrade log

engine-setup generated answer files

Change-Id: Ie293bb894a1f0b4f7a2c35abf90c1a5950ede44f
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/common/init-configs/1_centos7_engine_1_centos7_host.yml
+++ b/common/init-configs/1_centos7_engine_1_centos7_host.yml
@@ -29,6 +29,9 @@ domains:
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
+    artifacts:
+      - /var/lib/pgsql/upgrade_rh-postgresql95-postgresql.log
+      - /var/lib/ovirt-engine/setup/answers
 
   __HOST0__:
     vm-type: ovirt-host
