--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -48,6 +48,8 @@ domains:
     artifacts:
       - /var/log
       - /root/fluentd
+      - /var/lib/pgsql/upgrade_rh-postgresql95-postgresql.log
+      - /var/lib/ovirt-engine/setup/answers
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
     <<: *vm-common-settings
