Collect host-deploy bundle from the engine
Change-Id: I8af18a3eded4aea4518cb0608e65c687081bce20
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/performance-suite-master/LagoInitFile.in
+++ b/performance-suite-master/LagoInitFile.in
@@ -46,6 +46,7 @@ domains:
     artifacts:
           - /root/fluentd
           - /var/opt/rh/rh-postgresql95/lib/pgsql/data/pg_log
+          - /var/cache/ovirt-engine
 
 
 {% if not env.OST_USE_VDSMFAKE is defined %}
