--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -48,6 +48,7 @@ domains:
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_engine.sh
     artifacts:
       - /var/log
+      - /var/cache/ovirt-engine
       - /var/lib/pgsql/upgrade_rh-postgresql95-postgresql.log
       - /var/lib/ovirt-engine/setup/answers
       - /etc/ovirt-engine
