--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -40,7 +40,7 @@ domains:
     metadata:
       ovirt-engine-password: 123
       deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
+        - $LAGO_INITFILE_PATH/../common/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
         {%- if install_storage_with_lago_deploy|default(true) %}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
         {%- endif %}
@@ -83,7 +83,7 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
+        - $LAGO_INITFILE_PATH/../common/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
         {% if loop.first and install_ovirt_host|default(false) -%}
         - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_1st_host_el7.sh
