--- a/upgrade-from-release-suite-master/vars/main.yml
+++ b/upgrade-from-release-suite-master/vars/main.yml
@@ -4,3 +4,4 @@ templates:
 hostCount: 1
 install_storage_with_lago_deploy: true
 install_ovirt_host: false
+create_local_repo: add_local_repo_no_ext_access.sh
