new suite: he-basic-iscsi-suite-4.2
the suite is meant to do exactly same tests as in
he-basic-suite-4.2 but deploying on iscsi instead of nfs.

Change-Id: I0403b876b2ddf2947717d467003c3a4732fac11f
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -9,6 +9,7 @@ substage:
   - he-basic-ansible_suite_4.2
   - he-basic-ansible_suite_master
   - he-basic-iscsi_suite_master
+  - he-basic-iscsi_suite_4.2
   - he-basic_suite_4.2
   - he-basic_suite_master
   - image-ng_suite_4.2
